[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptosentry"
version = "0.2.0"
description = "Real bignum RSA plus an honest, citation-backed classical-vs-quantum complexity comparison"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "matplotlib==3.11.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pip-audit", "bandit"]

[project.scripts]
cryptosentry = "cryptosentry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
