[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptosentry"
version = "0.3.0"
description = "Real bignum RSA, a real Certificate Transparency key survey, a NIST-guidance-based key-risk assessment, and a FastAPI deployment"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "matplotlib==3.11.1",
    "cryptography==49.0.0",
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
    "pydantic==2.13.4",
    "slowapi==0.1.10",
    "prometheus-client==0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx", "pip-audit", "bandit"]

[project.scripts]
cryptosentry = "cryptosentry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
